Solucao/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <label>Change Request</label>
    <pluralLabel>Change Requests</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Change Request #</label>
        <displayFormat>CR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>