Solucao/objects/Change_Request__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <required>true</required>
</CustomField>